# cinelerra-gg

cinelerra-5.1/: COPYING  Cinelerra_factory  Makefile.am  Makefile.devel  README  autogen.sh  bld.sh  configure.ac  expanders.txt  inst.sh  leaker.C  lv2_blacklist.txt  opencv_build  plugin_config  plugin_defs  shuttlerc  soundtest.c
cinelerra-5.1/blds/: PKGBUILD  arch.bld  bld_dynamic.sh  bld_package.sh  bld_prepare.sh  bld_static.sh  bsd.bld  bsd.patch  cfg-cv.sh  cin.SlackBuild  cinelerra.spec  deb.bld  debpkg.sh  pkgbld.sh  rpm.bld  rpmsrc.sh
cinelerra-5.1/blds/debian/: changelog  cin.postinst  control  copyright  rules  sysctl.d
cinelerra-5.1/cinelerra/: CHANGELOG  CHANGELOG.1.1.7  CHANGELOG.1.1.8  CHANGELOG.1.1.9  CHANGELOG.1.2.0  CHANGELOG.1.2.2  CHANGELOG.1.2.3  CHANGELOG.2.1  CHANGELOG.2.2  CHANGELOG.4  Makefile  TODO  TODO.mine  TODO.r1027  TODO.r1040  aattachmentpoint.C  aattachmentpoint.h  aattachmentpoint.inc  aautomation.C  aautomation.h  aautomation.inc  aboutprefs.C  aboutprefs.h  aboutprefs.inc  adcuts.C  adcuts.h  adcuts.inc  adeviceprefs.C  adeviceprefs.h  adeviceprefs.inc  aedit.C  aedit.h  aedit.inc  aedits.C  aedits.h  aedits.inc  affine.C  affine.h  affine.inc  amodule.C  (+1140 more)
cinelerra-5.1/cinelerra/data/: about_bg_png.h  fake_ntsc_dv.h  fake_pal_dv.h  ff_audio_png.h  ff_video_png.h  heroine_logo9.xcf  heroine_logo9_png.h  lad_picon_png.h
cinelerra-5.1/cinelerra/tests/: live.xml  livechorus.xml  livevideo.xml  text2movie  text2movie.xml  text2movie2  text2movie2.xml
cinelerra-5.1/db/: Makefile  doc  note  sch.txt  sch1.txt  sch2.txt  tdb.C  tdb.h  thr.h  tst.C  tx.C  x.C  xsch.C
cinelerra-5.1/db/utils/: Makefile  add_path_pos.C  clip_accesses.C  clip_assets.C  clip_data.C  clip_del.C  clip_dups.C  clip_frames.C  clip_ls.C  clip_weights.C  cpdb.C  dbcounts.C  dbcvt.C  dbtv.C  delallclips.C  dmp.C  frame2pbm.C  frame_clips.C  framediff.C  framekey.C  frameweights.C  histeq.C  histeq.C.sav1  histeq.C.sav2  histplot.C  new_db.C  path_ls.C  pbm2frame.C  pbm2key.C  plotwts.sh  root_info.C  timelinechk.C  x.C  xtv.C
cinelerra-5.1/doc/: 99-ShuttlePRO.rules  Makefile  RenderMux.sh  ShellCmds.html  ShellCmds_en.html  ShellCmds_ru.html  cinelerra.html  cinelerra.texi  shortcuts.html
cinelerra-5.1/ffmpeg/: decode.opts  encode.opts  ffmpeg.opts  plugin.opts
cinelerra-5.1/ffmpeg/audio/: acc256k.pro  audio.opts  bluray.m2ts  dvd.dfl  dvd.dvd  f4v.dfl  faststart_h264.qt  flac.mkv  flac.webm  flv.dfl  ima4.qt  m2ts.dfl  mkv.dfl  mov.dfl  mp3.dfl  mp3.f4v  mp3.flv  mp3.qt  mp4.dfl  mp4.qt  mulaw.qt  opus.mkv  opus.webm  opus_ffmpeg.mkv  pcm.dfl  pro.dfl  s16.pcm  s16le.qt  s24.pcm  s32.pcm  s32le.qt  s8.pcm  s8.qt  stereo.youtube  stereo_with_h264.youtube  vorbis.mkv  vorbis.qt  webm.dfl  webm.webm  wmav1.qt  (+2 more)
cinelerra-5.1/ffmpeg/format/: bluray  dvd  fmp4  fqt
cinelerra-5.1/ffmpeg/video/: av1.webm  avc422.m2ts  avi.xvid  bluray.m2ts  bluray_dv_ntsc.m2ts  bluray_dv_pal.m2ts  bluray_lo.m2ts  bmp.dfl  div3.qt  div3v2.qt  div5.qt  dnxhd.qt  dvd.dvd  f4v.dfl  faststart_h264.qt  ffv1.mkv  flv.dfl  flv.flv  gif.dfl  h264.f4v  hd.youtube  hd_h264.youtube  hevc422p10.m2ts  hevc422p8.m2ts  huffyuv_screencapture.mov  j2k.qt  jp2.jp2  jpeg.qt  ks.pro  lossless.m2ts  med422p10.pro  mjpeg_444.qt  mjpg.qt  mkv.dfl  mov.mov  mpeg.dfl  mpeg.mpeg  ogg.dfl  pam.dfl  pam.pam  (+83 more)
cinelerra-5.1/guicast/: Makefile  arraylist.h  bcbar.C  bcbar.h  bcbar.inc  bcbitmap.C  bcbitmap.h  bcbitmap.inc  bcbutton.C  bcbutton.h  bcbutton.inc  bccapture.C  bccapture.h  bccapture.inc  bcclipboard.C  bcclipboard.h  bcclipboard.inc  bccmdl.py  bccmodels.C  bccmodels.h  bccolors.C  bccolors.h  bccolors.inc  bccounter.C  bccounter.h  bcdelete.C  bcdelete.h  bcdelete.inc  bcdialog.C  bcdialog.h  bcdialog.inc  bcdisplay.C  bcdisplay.h  bcdisplay.inc  bcdisplayinfo.C  bcdisplayinfo.h  bcdisplayinfo.inc  bcdragwindow.C  bcdragwindow.h  bcdragwindow.inc  (+177 more)
cinelerra-5.1/guicast/images/: check_png.h  default_icon_png.h  downmix51_2_png.h  file_film_png.h  file_folder_png.h  file_label_png.h  file_rename_dn_png.h  file_rename_hi_png.h  file_rename_up_png.h  file_size_capb_dn_png.h  file_size_capb_hi_png.h  file_size_capb_up_png.h  file_size_lwrb_dn_png.h  file_size_lwrb_hi_png.h  file_size_lwrb_up_png.h  file_size_semi_dn_png.h  file_size_semi_hi_png.h  file_size_semi_up_png.h  file_size_zero_dn_png.h  file_size_zero_hi_png.h  file_size_zero_up_png.h  file_sound_png.h  file_unknown_png.h  menu_popup_bg_png.h  menubar_bg_png.h  menubar_dn_png.h  menubar_hi_png.h  menubar_up_png.h  menuitem_dn_png.h  menuitem_hi_png.h  menuitem_up_png.h  xmeter_normal_png.h  ymeter_normal_png.h
cinelerra-5.1/guicast/xfer/: Makefile
cinelerra-5.1/image/: cin.desktop  cin.xpm
cinelerra-5.1/info/: plugins.txt
cinelerra-5.1/libzmpeg3/: Makefile  atrack.C  bits.C  css.C  dbg  demux.C  dmux.C  dvb.C  huf.C  huf.h  ifo.C  ifo.h  libzmpeg3.C  libzmpeg3.h  mpeg3.C  mpeg31trkpony.C  mpeg3cat.C  mpeg3cc2txt.C  mpeg3dump.C  mpeg3ifochk.C  mpeg3peek.C  mpeg3show.C  mpeg3toc.C  mutex.h  nav.h  strack.C  thread.C  thread.h  title.C  toc.C  vtrack.C  x.C  xfont.C  y.C  y.c  yy.C  zio.C
cinelerra-5.1/libzmpeg3/audio/: ac3.C  audio.C  dct.C  huffman.C  (+5 more)
cinelerra-5.1/models/: amazon01  amazon01.xcf.bz2  heroine01  heroine01.xcf.bz2  knight.xcf.bz2  knight01  lion.xcf.bz2  lion01  lion2.xcf.bz2  warrior01  warrior01.xcf.bz2
cinelerra-5.1/mpeg2enc/: Makefile  conform.c  fastintfns.h  fdctref.c  global.h  motion.c  motion.c.unroll  mpeg2enc.c  mpeg2enc.h  putbits.c  putpic.c  quantize.c  ratectl.c  readpic.c  stats.c  transfrm.c  writepic.c
cinelerra-5.1/mplexlo/: Makefile  mplex.c
cinelerra-5.1/msg/: txt
cinelerra-5.1/plugins/: Makefile
cinelerra-5.1/po/: HOW-TO.TXT  Makefile  chrset.c  cin.po  de.po  el.po  es.po  eu.po  fr.po  hi.po  it.po  ja.po  ko.po  lang.txt  locale_list.txt  nb.po  nlx.c  pt.po  ru.po  sl.po  uk.po  vi.po  xlat.C  xlat.sh  zh.po
cinelerra-5.1/tips/: tips.de  tips.el  tips.en  tips.es  tips.eu  tips.fr  tips.hi  tips.it  tips.ja  tips.ko  tips.nb  tips.pt  tips.ru  tips.sl  tips.uk  tips.vi  tips.zh
(+761 files in other folders)
